--- a/agriculture/herbicide-calculator.html
+++ b/agriculture/herbicide-calculator.html
@@ -426,25 +426,25 @@ Clear all changes
       </div>
     </div>
 <div class="description-txt">
-  <p>
-    Herbicide application rates and calculations can vary significantly based on farming practices, land size, and local recommendations. This <strong>herbicide calculator</strong> follows standard methods widely used in agriculture, especially for smallholder farmers in regions like Africa, South America, and parts of Asia. The tool helps convert herbicide dosage recommendations from hectares to smaller land areas, ensuring accurate and efficient application even when working with small plots and portable sprayers.
-  </p>
-  
-  <p>
-    For example, herbicide dosage is often given in liters per hectare (L/Ha), which is suitable for large-scale farming but impractical when dealing with smaller fields or gardens. This calculator converts those values into practical units like milliliters of herbicide required per sprayer tank, based on your specific equipment and water usage. This approach reduces waste, saves money, and minimizes the risk of over-application, which can harm crops and the environment.
-  </p>
-  
-  <p>
-    It's important to note that spray volume can also depend on factors such as sprayer type, nozzle settings, and target weed density. Inconsistent mixing or incorrect dosage can lead to poor weed control or unintended damage to desirable plants. Our tool simplifies this by asking for key inputs such as water volume per 100 square meters and the capacity of your sprayer. Using these values, the calculator provides a precise measurement of the herbicide required per tank, ensuring effective and safe application in accordance with agricultural best practices.
-  </p>
-  
-  <p>
-    Additionally, smallholder farmers often use manual or knapsack sprayers with limited tank capacities, making precise calculations essential for each refill. Applying herbicide without accurate conversions can lead to ineffective weed control or even regulatory issues related to excessive chemical use. To assist with this, we provide practical calculations suited for both field and garden settings, tailored to the realities of small-scale farming in countries like Nigeria, where organizations such as the International Institute of Tropical Agriculture (IITA) promote safe and efficient farming tools.
-  </p>
-  
-  <p>
-    This herbicide calculator is designed to promote responsible chemical use, support sustainable agriculture, and help farmers maximize productivity while protecting their crops and the environment. By providing clear, easy-to-understand results based on globally recognized units, this tool empowers farmers to apply herbicides confidently, efficiently, and safely.
-  </p>
+ <p>
+   The application rates and calculations of herbicides may differ considerably depending on the farming methods and size of the land along with the local recommendations. This is the herbicide calculator, which adheres to common procedures common in farmland, particularly small scale farmers in areas such as Africa, South America, and some of Asia. The tool assists in converting dosage levels of a herbicide to smaller pieces of land making sure to apply it effectively and correctly even when dealing with small plots and hand-held sprayers.
+ </p>
+ 
+ <p>
+   As an illustration, dosage of herbicides is usually in liters/hectare (L/Ha), which is convenient in massive farming but not realistic when working with smaller farms or gardens. This calculator will then translate those values into the useful units of milliliters of herbicide needed to spray a tank on your specific equipment and water consumption. This method minimizes waste, expenses and chances of excessive application that may be detrimental to crops and the environment.
+ </p>
+ 
+ <p>
+   It is worth mentioning that the volume of the spray may also be affected by the type of sprayers used, the nozzle adjustment, and the density of the targeted weed. Mixed inconsistently or with the wrong dosage may result in a poor weed control or unintentional damage to good plants. This is made easier by our tool which asks for the most important inputs like water volume per 100 square meters and sprayer capacity. With these values, the calculator can give an accurate calculation of the amount of herbicide needed in the tank, resulting in effective and safe application of the herbicide in agreement with the best practices of agriculture.
+ </p>
+ 
+ <p>
+   Moreover, smallholder farmers tend to employ manual or knapsack sprayers that have low tank capacities and therefore, it is very important to make accurate calculations every time they are refilled. Imprecise conversions of herbicide will result in poor weed management or even legal matters concerning excessive use of the chemicals. To this end, we offer useful calculations that are applicable to both field and garden contexts, which are adjusted to the context of small-scale farming in such countries as Nigeria, where the organizations like the International Institute of Tropical Agriculture (IITA) encourage the use of safe and efficient farming tools.
+ </p>
+ 
+ <p>
+   This herbicide calculator is meant to encourage responsible use of chemicals, help the farmers to sustain their agriculture and to maximize their crop production, as well as, safeguard their crop and environment. This tool will enable farmers to use herbicides with a lot of confidence, efficiency, and safety by giving them clear and easy to understand results based on globally accepted units.
+ </p>
 </div>
   </section>
   
