--- a/finance/vat-calculator.html
+++ b/finance/vat-calculator.html
@@ -619,7 +619,8 @@ Everyday Life
   </style>
   <script src="/assets/js/service-worker.js" defer crossorigin="anonymous"></script>
 <script src="/assets/js/search.js" defer crossorigin="anonymous"></script>
-<script src="/assets/js/header-functions.js" defer crossorigin="anonymous"></script
+<script src="/assets/js/header-functions.js" defer crossorigin="anonymous"></script>
+
 <script src="/assets/js/share-global.js" defer crossorigin="anonymous"></script>
 <script src="/assets/js/vat-calculator.js" defer crossorigin="anonymous"></script>
 
