--- a/math.html
+++ b/math.html
@@ -208,6 +208,7 @@ Everyday Life
   <h1>Algebra calculators 🔡</h1>
   <a href="/math/foil-calculator">Foil Calculator</a>
   <h1>Percentage Calculators 💯</h1>
+  <a href="/math/decimal-to-percent-converter">Decimal to Percent Converter</a>
   <a href="/math/percentage-calculator">Percentage Calculator </a>
   <a href="/math/percent-off-calculator">Percent Off Calculator</a>
 </div>
